// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Timer /> renders and shows time in correct format 1`] = `
<div>
  <div
    class="timer"
  >
    <div
      class="timerClock"
    >
      06
      <span
        class="timerLegend"
      >
        h
      </span>
       
      30
      <span
        class="timerLegend"
      >
        min
      </span>
       
      00
      <span
        class="timerLegend"
      >
        sec
      </span>
    </div>
    <div
      class="timerControl timerControlPlay"
    />
  </div>
</div>
`;

exports[`<Timer /> renders correct controls depending on timer state 1`] = `
<div>
  <div
    class="timer"
  >
    <div
      class="timerClock"
    >
      00
      <span
        class="timerLegend"
      >
        sec
      </span>
    </div>
    <div
      class="timerControl timerControlPlay"
    />
  </div>
</div>
`;

exports[`<Timer /> renders correct controls depending on timer state 2`] = `
<div>
  <div
    class="timer"
  >
    <div
      class="timerClock"
    >
      00
      <span
        class="timerLegend"
      >
        sec
      </span>
    </div>
    <div
      class="timerControl timerControlPause"
    />
  </div>
</div>
`;
